Changed select to threads to have both fd's for each client

--- a/server/Makefile
+++ b/server/Makefile
@@ -3,6 +3,7 @@ BUILD_DIR = build
 SRC_DIR = src
 INCLUDE_DIR = include
 CFLAGS = -std=c++11 -I$(INCLUDE_DIR)
+LINK_FLAGS = -pthread
 
 EXECUTABLE_FILE = Server.out
 
@@ -51,32 +52,32 @@ $(BUILD_DIR):
 	mkdir -p $(BUILD_DIR)
 
 $(BUILD_DIR)/Main.o: $(MainSensitivityList)
-	$(CC) $(CFLAGS) -c $(SRC_DIR)/main.cpp -o $(BUILD_DIR)/Main.o
+	$(CC) $(CFLAGS) $(LINK_FLAGS) -c $(SRC_DIR)/main.cpp -o $(BUILD_DIR)/Main.o
 
 $(BUILD_DIR)/Server.o: $(ServerSensitivityList)
-	$(CC) $(CFLAGS) -c $(SRC_DIR)/Server.cpp -o $(BUILD_DIR)/Server.o
+	$(CC) $(CFLAGS) $(LINK_FLAGS) -c $(SRC_DIR)/Server.cpp -o $(BUILD_DIR)/Server.o
 
 $(BUILD_DIR)/CommandHandler.o: $(CommandHandlerSensitivityList)
-	$(CC) $(CFLAGS) -c $(SRC_DIR)/CommandHandler.cpp -o $(BUILD_DIR)/CommandHandler.o
+	$(CC) $(CFLAGS) $(LINK_FLAGS) -c $(SRC_DIR)/CommandHandler.cpp -o $(BUILD_DIR)/CommandHandler.o
 
 $(BUILD_DIR)/ConfigReader.o: $(ConfigReaderSensitivityList)
-	$(CC) $(CFLAGS) -c $(SRC_DIR)/ConfigReader.cpp -o $(BUILD_DIR)/ConfigReader.o
+	$(CC) $(CFLAGS) $(LINK_FLAGS) -c $(SRC_DIR)/ConfigReader.cpp -o $(BUILD_DIR)/ConfigReader.o
 
 $(BUILD_DIR)/User.o: $(UserSensitivityList)
-	$(CC) $(CFLAGS) -c $(SRC_DIR)/User.cpp -o $(BUILD_DIR)/User.o
+	$(CC) $(CFLAGS) $(LINK_FLAGS) -c $(SRC_DIR)/User.cpp -o $(BUILD_DIR)/User.o
 
 $(BUILD_DIR)/Logger.o: $(LoggerSensitivityList)
-	$(CC) $(CFLAGS) -c $(SRC_DIR)/Logger.cpp -o $(BUILD_DIR)/Logger.o
+	$(CC) $(CFLAGS) $(LINK_FLAGS) -c $(SRC_DIR)/Logger.cpp -o $(BUILD_DIR)/Logger.o
 
 $(BUILD_DIR)/Exception.o: $(ExceptionSensitivityList)
-	$(CC) $(CFLAGS) -c $(SRC_DIR)/Exception.cpp -o $(BUILD_DIR)/Exception.o
+	$(CC) $(CFLAGS) $(LINK_FLAGS) -c $(SRC_DIR)/Exception.cpp -o $(BUILD_DIR)/Exception.o
 
 $(BUILD_DIR)/Response.o: $(ResponseSensitivityList)
-	$(CC) $(CFLAGS) -c $(SRC_DIR)/Response.cpp -o $(BUILD_DIR)/Response.o
+	$(CC) $(CFLAGS) $(LINK_FLAGS) -c $(SRC_DIR)/Response.cpp -o $(BUILD_DIR)/Response.o
 
 
 $(EXECUTABLE_FILE): $(OBJECTS)
-	$(CC) $(CFLAGS) $(OBJECTS) -o $(EXECUTABLE_FILE)
+	$(CC) $(CFLAGS) $(LINK_FLAGS) $(OBJECTS) -o $(EXECUTABLE_FILE)
 
 .PHONY: clean
 clean:
